# dedupe_tree

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security.yml
src/dedupe_tree/: __init__.py  cache.py  cli.py  deduplicator.py  directory_scanner.py  scanner.py
tests/: test_cache.py  test_cli.py  test_deduplicator.py  test_directory_scanner.py  test_scanner.py
