[project]
name = "dedupe-tree"
version = "0.1.0"
description = "Find and remove duplicate files based on SHA256 checksums, prioritizing removal of deeply nested files"
authors = [{name = "m27315", email = "m27315@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
dedupe-tree = "dedupe_tree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 150
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
